# SecSurfTrade

./: .gitignore  00_ARCHITECTURE.md  02_state_schema_and_compare.md  03_atp_read_only.md  04_strategy_generator.md  05_tui_presenter.md  06_monitor_loop.md  CHANGELOG.md  README.md  USER_GUIDE.md  rebalance_calculator.html  run.ps1  server.py  strategy_map.example.json
fidelity_rebalancer/: USER_GUIDE.md  accounts.example.json  pyproject.toml
fidelity_rebalancer/adapters/: __init__.py  _atp_connect.py  _atp_parse.py  _atp_ui.py  atp_level2.py  atp_ocr.py  atp_orders.py  atp_quote.py  atp_vision.py  atp_watchlist.py  csv_reader.py  fatp_connect.py  fatp_watchlist.py  mock_atp.py  yfinance_fallback.py
fidelity_rebalancer/cli/: __init__.py  compare.py  compute.py  eod_report.py  export_fills.py  preflight.py  progress.py  strategy.py
fidelity_rebalancer/docs/: test_plan_atp_integration.md
fidelity_rebalancer/engine/: calculator.py  chunker.py  decision_context.py  escalation.py  observability.py  optimizer.py  scheduler.py  size_context.py  spread_context.py  stall.py  strategy_buy.py  strategy_sell.py  sweep.py  volatility.py  vwap.py
fidelity_rebalancer/preflight/: __init__.py  checks.py  orchestrator.py  planner.py  sanity.py
fidelity_rebalancer/scripts/: atp_smoke.py  check_vol.py  e2e_journal_demo.py  gen_strategies_fixture.py  patch_docs.py  t13_check.py  t32_check.py
fidelity_rebalancer/state/: compare.py  importer.py  schema.py
fidelity_rebalancer/tests/: test_adapters_logging.py  test_atp_adapters.py  test_atp_ocr_orders.py  test_calculator.py  (+30 more)
(+27 files in other folders)
