[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelity-rebalancer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "textual>=0.50",
    "rich>=13.7",
    "loguru>=0.7",
    "yfinance>=0.2.36",
    "keyring>=24",
    "websockets>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio"]
win = ["pywinauto>=0.6.8"]
browser = ["playwright>=1.44"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "state*", "adapters*", "tui*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
